# riscv-phone-sw

./: .gdbinit  Cargo.toml  Makefile  README.md  build.rs  constants.rs  debug.gdb  env.sh  g002-openocd.cfg  hifive-openocd.cfg  reset.gdb  run.gdb  stlog.x  upload.gdb
.cargo/: config
examples/: arraystring.rs  atomiqueue_example.rs  blinky_clint.rs  bridge_example.rs  call_c.rs  chello.c  contacts.rs  echo.rs  interrupts.rs  keypad.rs  max7221.rs  nokia5110.rs  repl.rs  sc18is600_example.rs  single_pass.rs  stlog.rs  sw_uart.rs  uart_mux.rs
src/: eeprom.rs  led_fade.c  main.rs  max7221.c  qspi.rs  sc18is600.rs  spi.rs
