[package]
name = "riscv_phone_sw"
version = "0.1.0"
authors = ["Spencer Moss <radio@another.computer>"]
edition = "2018"

[dependencies]
nb = "0.1.1"
riscv = "0.5.0"
riscv-rt = "0.5.0"
e310x = "0.4.0"
e310x-hal = "0.4.0"
hifive1 = { version = "0.4.0", features = ["board-hifive1"] }
pcd8544 = "0.1.8"
panic-halt = "0.2.0"
embedded-hal = "0.2"
#riscv-alloc = { git = "https://github.com/riscv-rust/riscv-alloc.git" }

[dev-dependencies]
atomiqueue = { git = "https://github.com/Inityx/atomiqueue.git" }
riscv-semihosting = { path = "../riscv-semihosting" }
stlog = "0.3.2"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
incremental = false

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false
